Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-26110

Auto-failover on Disk Issues: EP engine to return read & write failure stats

    XMLWordPrintable

Details

    Description

       

      "Auto-failover on Disk Issues" feature has a dependency on EP engine to return read/write failure stats.

      Refer to the document below and comments from Dave Rigby on which stats should be returned by EP engine.

      https://docs.google.com/document/d/15bNgaNBK8gW2VnLr2WaWaEjUjKWdfycoQ5U6nhF-dNY/edit 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            poonam Poonam Dhavale
            poonam Poonam Dhavale
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty