MB-26110: Add compaction failure count to KVStore stats

To help with auto-failover of disk issues, we want to add a statistic
for compaction failures.  This is provided on a per shard basis similar
to other KVStore stats.

A subseqent patch will provide an aggregate of this and other KVStore
stats for use by ns_server.

Change-Id: I657ce17423439cf150e0a4705450331aa02b22db
Reviewed-on: http://review.couchbase.org/85642
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>